meta: update for Hyas community health files

--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "@hyas/seo",
+  "version": "1.0.3",
   "description": "Hyas SEO",
-  "version": "1.0.2",
-  "browserslist": [
-    "defaults"
-  ],
-  "repository": "https://github.com/h-enk/hyas-seo",
+  "author": "Hyas",
   "license": "MIT",
-  "publishConfig": {
-    "access": "public"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gethyas/seo.git"
   },
   "scripts": {
     "clean:install": "shx rm -rf package-lock.json node_modules",
@@ -18,5 +16,8 @@
   "devDependencies": {
     "auto-changelog": "^2.4.0",
     "shx": "^0.3.4"
+  },
+  "engines": {
+    "node": ">=16.12.0"
   }
 }
